--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </div>
         <div id="bitcoinGif"></div>
+        <p id="ratingID"></p>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
